# University-Registrar-CLI

./: CMakeLists.txt  Course.cpp  Course.h  LICENSE  Member.cpp  Member.h  Professor.cpp  Professor.h  README.md  Registrar.cpp  Registrar.h  Student.cpp  Student.h  main.cpp
